# WePower_BLE_Beacon

./: CMakeLists.txt  README.md  prj.conf  west.yml
.github/workflows/: docker-image.yml
boards/arm/wp_rev1/: Kconfig.board  Kconfig.defconfig  board.cmake  wp_rev1.dts  wp_rev1.yaml  wp_rev1_defconfig
components/accel/: CMakeLists.txt
components/accel/include/: accel.h
components/accel/src/: accel.c
components/config_commands/: CMakeLists.txt
components/config_commands/include/: config_commands.h
components/config_commands/src/: config_commands.c
components/device_config/: CMakeLists.txt
components/device_config/include/: app_types.h  device_config.h
components/encrypt/: CMakeLists.txt
components/encrypt/include/: encrypt.h
components/encrypt/src/: encrypt.c
components/error_output/: CMakeLists.txt
components/error_output/include/: error_output.h
components/error_output/src/: error_output.c
components/fram/: CMakeLists.txt
components/fram/include/: fram.h
components/fram/src/: fram.c
components/gpio/: CMakeLists.txt
components/gpio/include/: app_gpio.h
components/gpio/src/: app_gpio.c
components/i2c_sensors/: CMakeLists.txt
components/i2c_sensors/include/: i2c_sensors.h
components/temp_pressure/: CMakeLists.txt
main/: main.c
main/include/: app_bt.h  app_burn_energy.h  app_cli.h  app_encrypt.h  app_manuf_data.h  app_sensors.h  comparator.h
main/src/: app_bt.c  app_burn_energy.c  app_cli.c  app_encrypt.c  app_gpio.c  app_manuf_data.c  app_sensors.c  app_tests.c  comparator.c
src/: main.c
(+3 files in other folders)
