cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

project(version_2)

target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/components)
add_subdirectory(components/device_config)
add_subdirectory(components/i2c_sensors)
add_subdirectory(components/fram)
add_subdirectory(components/config_commands)
add_subdirectory(components/accel)
add_subdirectory(components/temp_pressure)
add_subdirectory(components/encrypt)
add_subdirectory(components/error_output)
add_subdirectory(components/gpio)

target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/main/include)
target_sources(app PRIVATE main/main.c)
target_sources(app PRIVATE main/src/comparator.c)
target_sources(app PRIVATE main/src/app_encrypt.c)
target_sources(app PRIVATE main/src/app_manuf_data.c)
target_sources(app PRIVATE main/src/app_sensors.c)
target_sources(app PRIVATE main/src/app_bt.c)
target_sources(app PRIVATE main/src/app_burn_energy.c)
target_sources(app PRIVATE main/src/app_cli.c)
target_sources(app PRIVATE main/src/app_tests.c)